# nme-dependencies

./: .gitignore  CMakeLists.txt  README.md
CMake/: ExternalCURL.cmake  ExternalFreetype.cmake  ExternalGLFW.cmake  ExternalImage.cmake  ExternalOggVorbis.cmake  ExternalPNG.cmake  ExternalSDL.cmake  ExternalTheora.cmake  freetype.cmake  glfw.cmake  libjpeg.cmake  libogg.cmake  libtheora.cmake  libvorbis.cmake  openal.cmake  zlib.cmake
