PROJECT(NMEDependencies)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(NOT NME_DEPS_DOWNLOAD_DIR)
    SET(NME_DEPS_DOWNLOAD_DIR ${NMEDependencies_SOURCE_DIR}/Downloads)
    MESSAGE("No NME_DEPS_DOWNLOAD_DIR specified, using ${NME_DEPS_DOWNLOAD_DIR}")
ENDIF(NOT NME_DEPS_DOWNLOAD_DIR)

SET(CMAKE_MODULE_PATH ${NMEDependencies_SOURCE_DIR}/CMake)

OPTION(NME_DEPS_FREETYPE "Download and build the FreeType package" ON)
OPTION(NME_DEPS_PNG "Download and build the PNG package" ON)
OPTION(NME_DEPS_GLFW "Download and build the GLFW package" ON)
OPTION(NME_DEPS_VORBIS "Download and build the OggVorbis package" ON)
OPTION(NME_DEPS_THEORA "Download and build the Theora package" ON)

IF(NME_DEPS_GLFW)
	INCLUDE(ExternalGLFW)
ENDIF(NME_DEPS_GLFW)

IF(NME_DEPS_PNG)
	INCLUDE(ExternalPNG)
ENDIF(NME_DEPS_PNG)

IF(NME_DEPS_FREETYPE)
	INCLUDE(ExternalFreetype)
ENDIF(NME_DEPS_FREETYPE)

IF(NME_DEPS_VORBIS)
	INCLUDE(ExternalOggVorbis)
ENDIF(NME_DEPS_VORBIS)

IF(NME_DEPS_THEORA)
	INCLUDE(ExternalTheora)
ENDIF(NME_DEPS_THEORA)